2002-12-07  Bruno Haible  <bruno@clisp.org>

	Switch to autoconf-2.57 and automake-1.7.2.
	* fixautomake.m4: New file, extracted from configure.in.

2002-11-19  Bruno Haible  <bruno@clisp.org>

	Switch to autoconf-2.56.
	* fnmatch.m4 (gt_FUNC_FNMATCH): Use AC_LIBOBJ instead of assigning
	LIBOBJS.
	* getline.m4 (AM_FUNC_GETLINE): Likewise.

	* lib-ld.m4 (AC_LIB_PROG_LD_GNU): Define PATH_SEPARATOR before using
	it.

2002-11-13  Bruno Haible  <bruno@clisp.org>

	Assume ANSI C.
	* c-bs-a.m4: Remove file.
	* Makefile.am (EXTRA_DIST): Remove it.

2002-11-08  Bruno Haible  <bruno@clisp.org>

	* progtest.m4 (AM_PATH_PROG_WITH_TEST): Portability to OS/2.
	Reported by Andreas Buening <andreas.buening@nexgo.de>.

2002-11-08  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Print a message containing the macro's
	main decisions.
	Reported by Andreas Buening <andreas.buening@nexgo.de>.

2002-11-07  Bruno Haible  <bruno@clisp.org>

	* libtool.m4: Upgrade to libtool-1.4.3.

2002-10-27  Bruno Haible  <bruno@clisp.org>

	* intmax.m4: New file.
	* longlong.m4: New file.
	* longdouble.m4: New file.
	* wchar_t.m4: New file.
	* Makefile.am (EXTRA_DIST): Add them.

2002-08-25  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_PO_SUBDIRS): New variable POMAKEFILEDEPS. Substitute
	it into Makefile.

2002-08-06  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.5 released.

2002-07-27  Andreas Schwab  <schwab@suse.de>

	* gettext.m4: Avoid expanding ALL_LINGUAS in comment.

2002-08-02  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (aclocal_DATA): Add ulonglong.m4.

2002-07-25  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.4 released.

2002-07-24  Bruno Haible  <bruno@clisp.org>

	* javacomp.m4 (gt_JAVACOMP): Ignore all gcj versions for now.

2002-07-23  Bruno Haible  <bruno@clisp.org>

	* inttypes-pri.m4: New file.
	* gettext.m4 (AM_INTL_SUBDIR): Require gt_INTTYPES_PRI.
	* Makefile.am (aclocal_DATA): Add inttypes-pri.m4.
	(EXTRA_DIST): Likewise.
