@@ -1,3 +1,9 @@
+2003-01-08  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.m4 (AM_PO_SUBDIRS): Avoid warning when there are at least
+	two PO directories.
+	Reported by Alexander Turbov <AVTurbov@gwise.eltech.ru>.
+
 2002-12-07  Bruno Haible  <bruno@clisp.org>
 
 	Switch to autoconf-2.57 and automake-1.7.2.
